Changes to support adding assets

--- a/lib/main_context/main_context.html
+++ b/lib/main_context/main_context.html
@@ -11,7 +11,7 @@
   <template>
     <shadow>
       <!-- TODO: Remove this route when we're hosted on sam_server -->
-      <cs-route pattern="^(http://localhost:8000)?/">
+      <cs-route pattern="^(http://([^/]+))?/">
         <cs-route pattern="^assets/user/\d+">
           <cs-route pattern="^/?$" tag="asset-list"></cs-route>
           <cs-route pattern="^/asset/[0-9a-z]+/?$" tag="asset-details"></cs-route>
