Removed hardcoded assetlist from index

--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,7 @@
     <body fullbleed unresolved>
         <h1>Test</h1>
         <cs-session csrfToken="<% {csrf_token} %>"></cs-session>
-        <asset-list>
-        </asset-list>
+        <asset-list href="<% {init_url} %>"></asset-list>
         
         <div id="createAsset">
           <h2>Create asset</h2>
