--- a/web/asset/asset.html
+++ b/web/asset/asset.html
@@ -11,7 +11,7 @@
     <link rel="import" href="../../../packages/cs_elements/session/session.html">
     <link rel="import" href="../../../packages/sam_server_web_client/form_controls/form_controls.html">
     
-    <script type="application/dart">export 'package:polymer/polymer.dart';</script>
+    <script type="application/dart" src="/web/asset/asset.dart"></script>
     <style>
 	     html /deep/ input[is=core-input]#name {
 	        font-size: 2em;
@@ -26,7 +26,7 @@
     </style>
   </head>
   
-  <body>
+  <body fullbleed unresolved>
     <cs-session csrfToken="<% {csrf_token} %>"></cs-session>
     
     <asset-details qrcode="<% qr_code %>" formMethod="PUT">
