Added signup form template and fixed some issues with login page

--- a/web/auth/login.html
+++ b/web/auth/login.html
@@ -17,6 +17,6 @@
     <login-form>
     </login-form>
     
-    <a href="/authentication/create_user">Signup</a>
+    <a href="/auth/register">Signup</a>
   </body>
 </html>
