--- a/web/auth/register.html
+++ b/web/auth/register.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     
     <link rel="import" href="packages/polymer/polymer.dart">
-    <link rel="import" href="packages/cs_elements/cs_session.html">
-    <link rel="import" href="packages/sam_server_web_client/signup_form.html">
+    <link rel="import" href="packages/cs_elements/session/session.html">
+    <link rel="import" href="packages/sam_server_web_client/auth/signup_form/signup_form.html">
+  
+    <script type="application/dart" src="/web/auth/register.dart"></script>
   </head>
   
   <body>
