Added a containing div to password strength
And removed the text declaring time to crack (possibly add back when styling elements)

--- a/lib/auth/password_strength/password_strength.html
+++ b/lib/auth/password_strength/password_strength.html
@@ -17,12 +17,13 @@
         background-color: green;
       }
     </style>
+    <div id="container" layout horizontal>
     <div id="meter">
-      Time to crack: {{crackTimeDisplay}}<br />
       <span id="score_1" classes="{{ { highlighted: score == 0 } }}"> </span>
       <span id="score_2" classes="{{ { highlighted: score == 1 } }}"> </span>
       <span id="score_3" classes="{{ { highlighted: score == 2 } }}"> </span>
       <span id="score_4" classes="{{ { highlighted: score == 3 } }}"> </span>
+    </div>
     </div>
   </template>
   <script type="application/dart" src="password_strength.dart"></script>
