--- a/lib/auth/signup_form/signup_form.html
+++ b/lib/auth/signup_form/signup_form.html
@@ -2,10 +2,11 @@
 
 <link rel="import" href="../../../../packages/polymer/polymer.html">
 <link rel="import" href="../../../../packages/core_elements/core_input.html">
+<link rel="import" href="../../../../packages/core_elements/core_icons.html">
 <link rel="import" href="../../../../packages/cs_elements/json_form/json_form.html">
+<link rel="import" href="../../../../packages/cs_elements/form_controls/form_controls.html">
 
 <link rel="import" href="../password_strength/password_strength.html">
-<link rel="import" href="../../form_controls/form_controls.html">
 
 <polymer-element name="signup-form">
   <template>
@@ -19,16 +20,16 @@
     </style>
     <form is="cs-json-form" method="POST" id="mainform">
       <div id="usernameInput" layout horizontal>
-      <!-- TODO: What form controls should look like
-      <form-controls states="disabled enabled" initState="disabled">
-        <form-control type="edit" shown="disabled"  icon="create"></form-control>
-        <form-control type="cancel" shown="enabled" icon="cancel"></form-control>
-        <form-control type="save" shown="enabled"   icon="save"></form-control>
-      </form-controls>
-      -->
         <input is="core-input" type="text" name="username" placeholder="Username" 
                value="{{username}}" required/>
-        <form-controls id="controls"></form-controls>
+               
+        <cs-form-control-panel enabled?="{{formDisabled}}">
+          <cs-form-control visibleState="disabled">
+            <core-icon icon="save" on-click="{{submitForm}}"></core-icon>
+          </cs-form-control>
+        </cs-form-control-panel>
+        
+        <!-- <form-controls id="controls"></form-controls> -->
       </div>
       <input is="core-input" type="email" name="email" id="email" placeholder="Email" 
              value="{{email}}" required/>
