--- a/lib/asset_details/asset_base/asset_base.html
+++ b/lib/asset_details/asset_base/asset_base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<link rel="import" href="../../../..packages/polymer/polymer.html">
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 
 <polymer-element name="asset-base" attributes="href name description price">
   <template>
   </template>
-  <script type="application/dart" href="asset_base.dart"></script>
+  <script type="application/dart" src="asset_base.dart"></script>
 </polymer-element>
