--- a/web/auth/register.html
+++ b/web/auth/register.html
@@ -8,11 +8,11 @@
     <link rel="import" href="packages/cs_elements/session/session.html">
     <link rel="import" href="packages/sam_server_web_client/auth/signup_form/signup_form.html">
   
-    <script type="application/dart" src="/web/auth/register.dart"></script>
+    <script type="application/dart" src="register.dart"></script>
   </head>
   
   <body>
-    <cs-session csrfToken="<% csrf_token %>"></cs-session>
+    <cs-session csrfToken="{% csrf_token %}"></cs-session>
     <signup-form></signup-form>
   </body>
 </html>
