--- a/lib/auth/signup_form/signup_form.html
+++ b/lib/auth/signup_form/signup_form.html
@@ -23,7 +23,7 @@
         <input is="core-input" type="text" name="username" placeholder="Username" 
                value="{{username}}" required/>
                
-        <cs-form-control-panel enabled?="{{formDisabled}}">
+        <cs-form-control-panel state="disabled">
           <cs-form-control visibleState="disabled">
             <core-icon icon="save" on-click="{{submitForm}}"></core-icon>
           </cs-form-control>
