Relative import of dart lib
Also, fixed polymer <link>

--- a/web/auth/register.html
+++ b/web/auth/register.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     
-    <link rel="import" href="packages/polymer/polymer.dart">
+    <link rel="import" href="packages/polymer/polymer.html">
     <link rel="import" href="packages/cs_elements/session/session.html">
     <link rel="import" href="packages/sam_server_web_client/auth/signup_form/signup_form.html">
   
