--- a/web/asset/asset.html
+++ b/web/asset/asset.html
@@ -10,7 +10,7 @@
     <link rel="import" href="../../../packages/cs_elements/money_input/money_input.html">
     <link rel="import" href="../../../packages/cs_elements/session/session.html">
     
-    <script type="application/dart" src="/asset/asset.dart"></script>
+    <script type="application/dart" src="asset.dart"></script>
     <style>
 	     html /deep/ input[is=core-input]#name {
 	        font-size: 2em;
