Element cs-money-input is now called money-input

--- a/web/index.html
+++ b/web/index.html
@@ -26,11 +26,11 @@
             <input is="core-input" id="description"
                    name="description"/>
             </label>
-            <cs-money-input name="price" label="Price"
+            <money-input name="price" label="Price"
                             currencyCode="AUD"
                             placeholder="Enter price"
                             symbol="$">
-            </cs-money-input>
+            </money-input>
           </asset-details>
         </div>
         
