--- a/web/asset/asset.html
+++ b/web/asset/asset.html
@@ -14,6 +14,8 @@
     <link rel="import" href="../../../packages/cs_elements/generic/drawer_panel_toggle/drawer_panel_toggle.html">
     <link rel="import" href="../../../packages/cs_elements/session/session.html">
     <link rel="import" href="../../../packages/cs_elements/asset/details/asset_details.html">
+    <link rel="import" href="../../../packages/cs_elements/nav_bar/nav_bar.html">
+    <link rel="import" href="../../../packages/cs_elements/nav_bar/nav_bar_item.html">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../../../packages/cs_elements/generic/common.css">
@@ -26,9 +28,11 @@
     <cs-session csrfToken="{% {csrf_token} %}"></cs-session>
     
     <core-drawer-panel drawerWidth="300px">
-      <div drawer>
-        <img class="logo" src="/sam_logo.svg">
-        </div>
+       <nav-bar drawer>
+        <nav-bar-item href="/">Accounts</nav-bar-item>
+        <nav-bar-item href="/">Reports</nav-bar-item>
+        <nav-bar-item href="/">Analytics</nav-bar-item>
+     </nav-bar>
       <div main layout horizontal center>
         <drawer-panel-toggle expanded core-drawer-toggle></drawer-panel-toggle>
         <asset-details asset="{% resource %}" flex></asset-details>
